nav spacing fixed

--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -79,6 +79,7 @@ header {
             display: inline;
             margin: 0;
             margin-left: 1rem;
+            margin-right: 1rem;
         }
     }
 }
